# tensorrt_custom_layer_dynamic_batchnms

./: CMakeLists.txt  README.md
batchedNMSPlugin/: batchedNMSPlugin.cpp  batchedNMSPlugin.h
samples/opensource/sampleFasterRCNN/: README.md
samples/opensource/sampleUffMaskRCNN/converted/: requirements.txt
